# first-opengl-project

./: .gitignore  CMakeLists.txt  build-and-run.sh
src/: CMakeLists.txt  main.cpp  shader.cpp  shader.h
